--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "react-tooltip": "^5.13.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.11"
