--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.13.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.11"
+    "sweetalert2": "^11.7.11",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
