--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.2",
     "@tanstack/react-query": "^4.29.12",
+    "@use-gesture/react": "^10.2.27",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
