--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.2",
+    "@emotion/react": "^11.11.1",
     "@tanstack/react-query": "^4.29.12",
-    "@use-gesture/react": "^10.2.27",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
+    "framer-motion": "^10.12.16",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
